--- a/EmployeeManagementSystem/emsfrontend/package.json
+++ b/EmployeeManagementSystem/emsfrontend/package.json
@@ -12,7 +12,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.3.0",
     "axios": "^0.21.0",
-    "date-fns": "^2.16.1",
+    "date-fns": "^2.0.0-beta.5",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
