--- a/EmployeeManagementSystem/emsfrontend/package.json
+++ b/EmployeeManagementSystem/emsfrontend/package.json
@@ -8,6 +8,7 @@
     "@material-ui/data-grid": "^4.0.0-alpha.11",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/pickers": "^3.2.10",
+    "@material-ui/x-grid": "^4.0.0-alpha.11",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.3.0",
